Spacing on margins fixed

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -28,8 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 aside {
   background-color: #5F81A3;
   color: #fff;
-  padding-top: 5%;
-  padding-left: 10%;
+  padding-left: 5%;
 }
 
 aside h3 {
